Práctica 4/src/y.output
Rules useless in parser due to conflicts

   18 @6: %empty

   24 $@9: %empty


State 3 conflicts: 3 reduce/reduce
State 13 conflicts: 9 shift/reduce
State 20 conflicts: 1 shift/reduce
State 33 conflicts: 9 shift/reduce
State 136 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PRINCIPAL bloque

    2 $@1: %empty

    3 bloque: INI_BLOQUE $@1 declar_de_variables_locales declar_de_subprogs FIN_BLOQUE

    4 $@2: %empty

    5 bloque: INI_BLOQUE $@2 declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE

    6 declar_de_subprogs: declar_de_subprogs declar_subprog
    7                   | %empty

    8 $@3: %empty

    9 declar_subprog: cabecera_subprograma $@3 bloque

   10 $@4: %empty

   11 declar_de_variables_locales: INI_VAR_LOCAL $@4 variables_locales FIN_VAR_LOCAL
   12                            | %empty

   13 variables_locales: variables_locales cuerpo_declar_variables
   14                  | cuerpo_declar_variables

   15 $@5: %empty

   16 cuerpo_declar_variables: TIPO_BASICO $@5 lista_variables PUNTO_Y_COMA
   17                        | error

   18 @6: %empty

   19 $@7: %empty

   20 cabecera_subprograma: TIPO_BASICO @6 variable $@7 PARENT_IZQUIERDO lista_parametros PARENT_DERECHO

   21 $@8: %empty

   22 cabecera_subprograma: TIPO_BASICO variable $@8 PARENT_IZQUIERDO PARENT_DERECHO
   23                     | error

   24 $@9: %empty

   25 sentencias: $@9 sentencias sentencia
   26           | sentencia

   27 sentencia: bloque
   28          | sentencia_asignacion
   29          | sentencia_si
   30          | sentencia_mientras
   31          | sentencia_entrada
   32          | sentencia_salida
   33          | sentencia_devolver
   34          | sentencia_hacer_hasta

   35 sentencia_asignacion: var_array ASIGNACION expresion PUNTO_Y_COMA

   36 sentencia_si: SI PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia
   37             | SI PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia SI_NO sentencia

   38 sentencia_hacer_hasta: HACER sentencia HASTA PARENT_IZQUIERDO expresion PARENT_DERECHO

   39 sentencia_mientras: MIENTRAS PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia

   40 sentencia_entrada: ENTRADA CADENA PUNTO_Y_COMA
   41                  | ENTRADA CADENA COMA lista_variables PUNTO_Y_COMA

   42 sentencia_salida: SALIDA lista_expresiones_o_cadena PUNTO_Y_COMA

   43 @10: %empty

   44 sentencia_devolver: DEVOLVER expresion @10 PUNTO_Y_COMA

   45 expresion: PARENT_IZQUIERDO expresion PARENT_DERECHO
   46          | OP_UNARIO expresion
   47          | constante
   48          | funcion
   49          | IDENTIFICADOR
   50          | OPSIGNO expresion
   51          | expresion OPSIGNO expresion
   52          | expresion OPMULTIPLICATIVO expresion
   53          | expresion OPIGUALDAD expresion
   54          | expresion OPRELACION expresion
   55          | expresion OPAND expresion
   56          | expresion OPOR expresion
   57          | error

   58 lista_variables: lista_variables COMA var_array
   59                | var_array
   60                | lista_variables error var_array

   61 variable: IDENTIFICADOR

   62 @11: %empty

   63 variable: IDENTIFICADOR INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ @11

   64 @12: %empty

   65 variable: IDENTIFICADOR INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ @12

   66 var_array: IDENTIFICADOR
   67          | IDENTIFICADOR INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ
   68          | error

   69 lista_parametros: lista_parametros COMA TIPO_BASICO variable
   70                 | TIPO_BASICO variable
   71                 | lista_parametros error TIPO_BASICO variable

   72 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion_o_cadena
   73                           | expresion_o_cadena

   74 expresion_o_cadena: expresion
   75                   | CADENA

   76 lista_expresiones: lista_expresiones COMA expresion
   77                  | expresion

   78 constante: CONST_ENTERO_SIN_SIGNO
   79          | const_matriz
   80          | CONST_LOGICA
   81          | CONST_FLOTANTE
   82          | CONST_CARACTER

   83 funcion: IDENTIFICADOR PARENT_IZQUIERDO lista_expresiones PARENT_DERECHO
   84        | IDENTIFICADOR PARENT_IZQUIERDO PARENT_DERECHO

   85 const_matriz: INI_BLOQUE lista_expresiones FIN_BLOQUE


Terminals, with rules where they appear

$end (0) 0
error (256) 17 23 57 60 68 71
OPOR (258) 56
OPAND (259) 55
OPIGUALDAD (260) 53
OPRELACION (261) 54
OPSIGNO (262) 50 51
OPMULTIPLICATIVO (263) 52
OP_UNARIO (264) 46
PRINCIPAL (265) 1
INI_BLOQUE (266) 3 5 85
FIN_BLOQUE (267) 3 5 85
PUNTO_Y_COMA (268) 16 35 40 41 42 44
COMA (269) 41 58 69 72 76
PARENT_IZQUIERDO (270) 20 22 36 37 38 39 45 83 84
PARENT_DERECHO (271) 20 22 36 37 38 39 45 83 84
INI_VAR_LOCAL (272) 11
FIN_VAR_LOCAL (273) 11
ASIGNACION (274) 35
INI_DIM_MATRIZ (275) 63 65 67
FIN_DIM_MATRIZ (276) 63 65 67
SI (277) 36 37
SI_NO (278) 37
HACER (279) 38
HASTA (280) 38
MIENTRAS (281) 39
DEVOLVER (282) 44
TIPO_BASICO (283) 16 20 22 69 70 71
ENTRADA (284) 40 41
SALIDA (285) 42
CONST_LOGICA (286) 80
CADENA (287) 40 41 75
CONST_ENTERO_SIN_SIGNO (288) 63 65 78
CONST_FLOTANTE (289) 81
CONST_CARACTER (290) 82
IDENTIFICADOR (291) 49 61 63 65 66 67 83 84


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
programa (38)
    on left: 1, on right: 0
bloque (39)
    on left: 3 5, on right: 1 9 27
$@1 (40)
    on left: 2, on right: 3
$@2 (41)
    on left: 4, on right: 5
declar_de_subprogs (42)
    on left: 6 7, on right: 3 5 6
declar_subprog (43)
    on left: 9, on right: 6
$@3 (44)
    on left: 8, on right: 9
declar_de_variables_locales (45)
    on left: 11 12, on right: 3 5
$@4 (46)
    on left: 10, on right: 11
variables_locales (47)
    on left: 13 14, on right: 11 13
cuerpo_declar_variables (48)
    on left: 16 17, on right: 13 14
$@5 (49)
    on left: 15, on right: 16
cabecera_subprograma (50)
    on left: 20 22 23, on right: 9
@6 (51)
    on left: 18, on right: 20
$@7 (52)
    on left: 19, on right: 20
$@8 (53)
    on left: 21, on right: 22
sentencias (54)
    on left: 25 26, on right: 5 25
$@9 (55)
    on left: 24, on right: 25
sentencia (56)
    on left: 27 28 29 30 31 32 33 34, on right: 25 26 36 37 38 39
sentencia_asignacion (57)
    on left: 35, on right: 28
sentencia_si (58)
    on left: 36 37, on right: 29
sentencia_hacer_hasta (59)
    on left: 38, on right: 34
sentencia_mientras (60)
    on left: 39, on right: 30
sentencia_entrada (61)
    on left: 40 41, on right: 31
sentencia_salida (62)
    on left: 42, on right: 32
sentencia_devolver (63)
    on left: 44, on right: 33
@10 (64)
    on left: 43, on right: 44
expresion (65)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57, on right: 35 36
    37 38 39 44 45 46 50 51 52 53 54 55 56 74 76 77
lista_variables (66)
    on left: 58 59 60, on right: 16 41 58 60
variable (67)
    on left: 61 63 65, on right: 20 22 69 70 71
@11 (68)
    on left: 62, on right: 63
@12 (69)
    on left: 64, on right: 65
var_array (70)
    on left: 66 67 68, on right: 35 58 59 60
lista_parametros (71)
    on left: 69 70 71, on right: 20 69 71
lista_expresiones_o_cadena (72)
    on left: 72 73, on right: 42 72
expresion_o_cadena (73)
    on left: 74 75, on right: 72 73
lista_expresiones (74)
    on left: 76 77, on right: 67 76 83 85
constante (75)
    on left: 78 79 80 81 82, on right: 47
funcion (76)
    on left: 83 84, on right: 48
const_matriz (77)
    on left: 85, on right: 79


State 0

    0 $accept: . programa $end

    PRINCIPAL  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: PRINCIPAL . bloque

    INI_BLOQUE  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    3 bloque: INI_BLOQUE . $@1 declar_de_variables_locales declar_de_subprogs FIN_BLOQUE
    5       | INI_BLOQUE . $@2 declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE

    error          reduce using rule 2 ($@1)
    error          [reduce using rule 4 ($@2)]
    FIN_BLOQUE     reduce using rule 2 ($@1)
    INI_VAR_LOCAL  reduce using rule 2 ($@1)
    INI_VAR_LOCAL  [reduce using rule 4 ($@2)]
    TIPO_BASICO    reduce using rule 2 ($@1)
    TIPO_BASICO    [reduce using rule 4 ($@2)]
    $default       reduce using rule 4 ($@2)

    $@1  go to state 6
    $@2  go to state 7


State 4

    1 programa: PRINCIPAL bloque .

    $default  reduce using rule 1 (programa)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    3 bloque: INI_BLOQUE $@1 . declar_de_variables_locales declar_de_subprogs FIN_BLOQUE

    INI_VAR_LOCAL  shift, and go to state 8

    $default  reduce using rule 12 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 9


State 7

    5 bloque: INI_BLOQUE $@2 . declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE

    INI_VAR_LOCAL  shift, and go to state 8

    $default  reduce using rule 12 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 10


State 8

   11 declar_de_variables_locales: INI_VAR_LOCAL . $@4 variables_locales FIN_VAR_LOCAL

    $default  reduce using rule 10 ($@4)

    $@4  go to state 11


State 9

    3 bloque: INI_BLOQUE $@1 declar_de_variables_locales . declar_de_subprogs FIN_BLOQUE

    $default  reduce using rule 7 (declar_de_subprogs)

    declar_de_subprogs  go to state 12


State 10

    5 bloque: INI_BLOQUE $@2 declar_de_variables_locales . declar_de_subprogs sentencias FIN_BLOQUE

    $default  reduce using rule 7 (declar_de_subprogs)

    declar_de_subprogs  go to state 13


State 11

   11 declar_de_variables_locales: INI_VAR_LOCAL $@4 . variables_locales FIN_VAR_LOCAL

    error        shift, and go to state 14
    TIPO_BASICO  shift, and go to state 15

    variables_locales        go to state 16
    cuerpo_declar_variables  go to state 17


State 12

    3 bloque: INI_BLOQUE $@1 declar_de_variables_locales declar_de_subprogs . FIN_BLOQUE
    6 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error        shift, and go to state 18
    FIN_BLOQUE   shift, and go to state 19
    TIPO_BASICO  shift, and go to state 20

    declar_subprog        go to state 21
    cabecera_subprograma  go to state 22


State 13

    5 bloque: INI_BLOQUE $@2 declar_de_variables_locales declar_de_subprogs . sentencias FIN_BLOQUE
    6 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error          shift, and go to state 23
    INI_BLOQUE     shift, and go to state 3
    SI             shift, and go to state 24
    HACER          shift, and go to state 25
    MIENTRAS       shift, and go to state 26
    DEVOLVER       shift, and go to state 27
    TIPO_BASICO    shift, and go to state 20
    ENTRADA        shift, and go to state 28
    SALIDA         shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 30

    error          [reduce using rule 24 ($@9)]
    INI_BLOQUE     [reduce using rule 24 ($@9)]
    SI             [reduce using rule 24 ($@9)]
    HACER          [reduce using rule 24 ($@9)]
    MIENTRAS       [reduce using rule 24 ($@9)]
    DEVOLVER       [reduce using rule 24 ($@9)]
    ENTRADA        [reduce using rule 24 ($@9)]
    SALIDA         [reduce using rule 24 ($@9)]
    IDENTIFICADOR  [reduce using rule 24 ($@9)]

    bloque                 go to state 31
    declar_subprog         go to state 21
    cabecera_subprograma   go to state 22
    sentencias             go to state 32
    $@9                    go to state 33
    sentencia              go to state 34
    sentencia_asignacion   go to state 35
    sentencia_si           go to state 36
    sentencia_hacer_hasta  go to state 37
    sentencia_mientras     go to state 38
    sentencia_entrada      go to state 39
    sentencia_salida       go to state 40
    sentencia_devolver     go to state 41
    var_array              go to state 42


State 14

   17 cuerpo_declar_variables: error .

    $default  reduce using rule 17 (cuerpo_declar_variables)


State 15

   16 cuerpo_declar_variables: TIPO_BASICO . $@5 lista_variables PUNTO_Y_COMA

    $default  reduce using rule 15 ($@5)

    $@5  go to state 43


State 16

   11 declar_de_variables_locales: INI_VAR_LOCAL $@4 variables_locales . FIN_VAR_LOCAL
   13 variables_locales: variables_locales . cuerpo_declar_variables

    error          shift, and go to state 14
    FIN_VAR_LOCAL  shift, and go to state 44
    TIPO_BASICO    shift, and go to state 15

    cuerpo_declar_variables  go to state 45


State 17

   14 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 14 (variables_locales)


State 18

   23 cabecera_subprograma: error .

    $default  reduce using rule 23 (cabecera_subprograma)


State 19

    3 bloque: INI_BLOQUE $@1 declar_de_variables_locales declar_de_subprogs FIN_BLOQUE .

    $default  reduce using rule 3 (bloque)


State 20

   20 cabecera_subprograma: TIPO_BASICO . @6 variable $@7 PARENT_IZQUIERDO lista_parametros PARENT_DERECHO
   22                     | TIPO_BASICO . variable $@8 PARENT_IZQUIERDO PARENT_DERECHO

    IDENTIFICADOR  shift, and go to state 46

    IDENTIFICADOR  [reduce using rule 18 (@6)]

    @6        go to state 47
    variable  go to state 48


State 21

    6 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 6 (declar_de_subprogs)


State 22

    9 declar_subprog: cabecera_subprograma . $@3 bloque

    $default  reduce using rule 8 ($@3)

    $@3  go to state 49


State 23

   23 cabecera_subprograma: error .
   68 var_array: error .

    ASIGNACION  reduce using rule 68 (var_array)
    $default    reduce using rule 23 (cabecera_subprograma)


State 24

   36 sentencia_si: SI . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia
   37             | SI . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia SI_NO sentencia

    PARENT_IZQUIERDO  shift, and go to state 50


State 25

   38 sentencia_hacer_hasta: HACER . sentencia HASTA PARENT_IZQUIERDO expresion PARENT_DERECHO

    error          shift, and go to state 51
    INI_BLOQUE     shift, and go to state 3
    SI             shift, and go to state 24
    HACER          shift, and go to state 25
    MIENTRAS       shift, and go to state 26
    DEVOLVER       shift, and go to state 27
    ENTRADA        shift, and go to state 28
    SALIDA         shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 30

    bloque                 go to state 31
    sentencia              go to state 52
    sentencia_asignacion   go to state 35
    sentencia_si           go to state 36
    sentencia_hacer_hasta  go to state 37
    sentencia_mientras     go to state 38
    sentencia_entrada      go to state 39
    sentencia_salida       go to state 40
    sentencia_devolver     go to state 41
    var_array              go to state 42


State 26

   39 sentencia_mientras: MIENTRAS . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia

    PARENT_IZQUIERDO  shift, and go to state 53


State 27

   44 sentencia_devolver: DEVOLVER . expresion @10 PUNTO_Y_COMA

    error                   shift, and go to state 54
    OPSIGNO                 shift, and go to state 55
    OP_UNARIO               shift, and go to state 56
    INI_BLOQUE              shift, and go to state 57
    PARENT_IZQUIERDO        shift, and go to state 58
    CONST_LOGICA            shift, and go to state 59
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 60
    CONST_FLOTANTE          shift, and go to state 61
    CONST_CARACTER          shift, and go to state 62
    IDENTIFICADOR           shift, and go to state 63

    expresion     go to state 64
    constante     go to state 65
    funcion       go to state 66
    const_matriz  go to state 67


State 28

   40 sentencia_entrada: ENTRADA . CADENA PUNTO_Y_COMA
   41                  | ENTRADA . CADENA COMA lista_variables PUNTO_Y_COMA

    CADENA  shift, and go to state 68


State 29

   42 sentencia_salida: SALIDA . lista_expresiones_o_cadena PUNTO_Y_COMA

    error                   shift, and go to state 54
    OPSIGNO                 shift, and go to state 55
    OP_UNARIO               shift, and go to state 56
    INI_BLOQUE              shift, and go to state 57
    PARENT_IZQUIERDO        shift, and go to state 58
    CONST_LOGICA            shift, and go to state 59
    CADENA                  shift, and go to state 69
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 60
    CONST_FLOTANTE          shift, and go to state 61
    CONST_CARACTER          shift, and go to state 62
    IDENTIFICADOR           shift, and go to state 63

    expresion                   go to state 70
    lista_expresiones_o_cadena  go to state 71
    expresion_o_cadena          go to state 72
    constante                   go to state 65
    funcion                     go to state 66
    const_matriz                go to state 67


State 30

   66 var_array: IDENTIFICADOR .
   67          | IDENTIFICADOR . INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ

    INI_DIM_MATRIZ  shift, and go to state 73

    $default  reduce using rule 66 (var_array)


State 31

   27 sentencia: bloque .

    $default  reduce using rule 27 (sentencia)


State 32

    5 bloque: INI_BLOQUE $@2 declar_de_variables_locales declar_de_subprogs sentencias . FIN_BLOQUE

    FIN_BLOQUE  shift, and go to state 74


State 33

   25 sentencias: $@9 . sentencias sentencia

    error          shift, and go to state 51
    INI_BLOQUE     shift, and go to state 3
    SI             shift, and go to state 24
    HACER          shift, and go to state 25
    MIENTRAS       shift, and go to state 26
    DEVOLVER       shift, and go to state 27
    ENTRADA        shift, and go to state 28
    SALIDA         shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 30

    error          [reduce using rule 24 ($@9)]
    INI_BLOQUE     [reduce using rule 24 ($@9)]
    SI             [reduce using rule 24 ($@9)]
    HACER          [reduce using rule 24 ($@9)]
    MIENTRAS       [reduce using rule 24 ($@9)]
    DEVOLVER       [reduce using rule 24 ($@9)]
    ENTRADA        [reduce using rule 24 ($@9)]
    SALIDA         [reduce using rule 24 ($@9)]
    IDENTIFICADOR  [reduce using rule 24 ($@9)]

    bloque                 go to state 31
    sentencias             go to state 75
    $@9                    go to state 33
    sentencia              go to state 34
    sentencia_asignacion   go to state 35
    sentencia_si           go to state 36
    sentencia_hacer_hasta  go to state 37
    sentencia_mientras     go to state 38
    sentencia_entrada      go to state 39
    sentencia_salida       go to state 40
    sentencia_devolver     go to state 41
    var_array              go to state 42


State 34

   26 sentencias: sentencia .

    $default  reduce using rule 26 (sentencias)


State 35

   28 sentencia: sentencia_asignacion .

    $default  reduce using rule 28 (sentencia)


State 36

   29 sentencia: sentencia_si .

    $default  reduce using rule 29 (sentencia)


State 37

   34 sentencia: sentencia_hacer_hasta .

    $default  reduce using rule 34 (sentencia)


State 38

   30 sentencia: sentencia_mientras .

    $default  reduce using rule 30 (sentencia)


State 39

   31 sentencia: sentencia_entrada .

    $default  reduce using rule 31 (sentencia)


State 40

   32 sentencia: sentencia_salida .

    $default  reduce using rule 32 (sentencia)


State 41

   33 sentencia: sentencia_devolver .

    $default  reduce using rule 33 (sentencia)


State 42

   35 sentencia_asignacion: var_array . ASIGNACION expresion PUNTO_Y_COMA

    ASIGNACION  shift, and go to state 76


State 43

   16 cuerpo_declar_variables: TIPO_BASICO $@5 . lista_variables PUNTO_Y_COMA

    error          shift, and go to state 51
    IDENTIFICADOR  shift, and go to state 30

    lista_variables  go to state 77
    var_array        go to state 78


State 44

   11 declar_de_variables_locales: INI_VAR_LOCAL $@4 variables_locales FIN_VAR_LOCAL .

    $default  reduce using rule 11 (declar_de_variables_locales)


State 45

   13 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 13 (variables_locales)


State 46

   61 variable: IDENTIFICADOR .
   63         | IDENTIFICADOR . INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ @11
   65         | IDENTIFICADOR . INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ @12

    INI_DIM_MATRIZ  shift, and go to state 79

    $default  reduce using rule 61 (variable)


State 47

   20 cabecera_subprograma: TIPO_BASICO @6 . variable $@7 PARENT_IZQUIERDO lista_parametros PARENT_DERECHO

    IDENTIFICADOR  shift, and go to state 46

    variable  go to state 80


State 48
